# rocket_tracker

./: .clang-format  CMakeLists.txt  LICENSE  README.md  package.xml
config/: config.yaml
core/: CMakeLists.txt  package.xml
core/include/: evaluator_gui.h  evaluator_node.h
core/launch/: rocket_tracker.launch
core/src/: evaluator_node.cpp  gui_form.ui  image_processor_node.cpp
include/: evaluator_gui.h
launch/: headless_tracker.launch  rocket_tracker.launch
msg/: detectionMSG.msg  image.msg
src/: evaluator_gui_form.ui  evaluator_node.cpp  frame_grabber_node.cpp  image_processor_node.cpp
